# kestrel-llms

./: .gitignore  AGENTS.md  LICENSE  README.md  REPO_MAP.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude-review-gate.yml  gate-tests.yml  llm-provider-packages.yml  publish.yml  repo-map.yml
docs/architecture/: LLM_PROVIDER_PLUGIN_EPIC.md
docs/code_reviews/: CLAUDE_PR_REVIEW.md  claude-initial-import.md  claude-pr-10.md  claude-pr-13.md  claude-pr-2.md  claude-pr-4.md  claude-pr-6.md  claude-pr-8.md
providers/kestrel-llm-bedrock/: pyproject.toml
providers/kestrel-llm-bedrock/src/kestrel_llm_bedrock/: __init__.py
providers/kestrel-llm-deepseek/: pyproject.toml
providers/kestrel-llm-deepseek/src/kestrel_llm_deepseek/: __init__.py
providers/kestrel-llm-kimi/: pyproject.toml
providers/kestrel-llm-kimi/src/kestrel_llm_kimi/: __init__.py
providers/kestrel-llm-llama-cpp/: pyproject.toml
providers/kestrel-llm-llama-cpp/src/kestrel_llm_llama_cpp/: __init__.py
providers/kestrel-llm-openai-compat/: pyproject.toml
providers/kestrel-llm-openai-compat/src/kestrel_llm_openai_compat/: __init__.py
providers/kestrel-llm-vertex/: pyproject.toml
providers/kestrel-llm-vertex/src/kestrel_llm_vertex/: __init__.py
providers/kestrel-llm-xai/: pyproject.toml
providers/kestrel-llm-xai/src/kestrel_llm_xai/: __init__.py
providers/kestrel-llms/: pyproject.toml
providers/kestrel-llms/src/kestrel_llms/: __init__.py
scripts/: claude_pr_review.sh  generate_repo_map.py  llm_provider_packages.sh  verify_claude_review.sh
tests/gate/: test_verify_claude_review.sh
tests/unit/providers/: test_llm_provider_plugins.py
