[project]
name = "kestrel-llms-workspace"
version = "0.1.0"
description = "Workspace tooling for the Kestrel LLM provider plugin monorepo."
requires-python = ">=3.11,<3.14"
dependencies = [
    "kestrel-sovereign>=0.12",
    "kestrel-sovereign-sdk>=0.14,<1",
    "openai==1.93.2",
    "pydantic>=2",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
kestrel-llm-deepseek = { workspace = true }
kestrel-llm-xai = { workspace = true }
kestrel-llm-kimi = { workspace = true }
kestrel-llm-openai-compat = { workspace = true }

[tool.uv.workspace]
members = ["providers/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --tb=short"
