[project]
name = "kestrel-llm-bedrock"
version = "0.1.0"
description = "AWS Bedrock LLM provider plugin for Kestrel Sovereign."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34,<2",
    "kestrel-sovereign-sdk>=0.17.0,<1",
    "pydantic>=2",
]

[project.entry-points."kestrel_sovereign.llm_providers"]
bedrock = "kestrel_llm_bedrock:BedrockAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
