[project]
name = "kestrel-llm-deepseek"
version = "0.1.4"
description = "DeepSeek LLM provider plugin for Kestrel Sovereign."
requires-python = ">=3.11"
dependencies = [
    "kestrel-llm-openai-compat>=0.1.4,<0.2",
    "kestrel-sovereign-sdk>=0.14.1,<1",
    "openai>=1.0",
    "pydantic>=2",
]

[project.entry-points."kestrel_sovereign.llm_providers"]
deepseek = "kestrel_llm_deepseek:DeepSeekAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
