[project]
name = "kestrel-llm-kimi"
version = "0.1.0"
description = "Moonshot Kimi LLM provider plugin for Kestrel Sovereign."
requires-python = ">=3.11"
dependencies = [
    "kestrel-sovereign-sdk>=0.14,<1",
    "openai>=1.0",
    "pydantic>=2",
]

[project.entry-points."kestrel_sovereign.llm_providers"]
kimi = "kestrel_llm_kimi:KimiAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

