[project]
name = "kestrel-llm-kimi"
version = "0.1.7"
description = "Moonshot Kimi LLM provider plugin for Kestrel Sovereign."
requires-python = ">=3.11"
dependencies = [
    "kestrel-llm-openai-compat>=0.1.6,<0.2",
    "kestrel-sovereign-sdk>=0.14.1,<1",
    "openai>=1.0",
    "pydantic>=2",
]

[project.entry-points."kestrel_sovereign.llm_providers"]
kimi = "kestrel_llm_kimi:KimiAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
