[project]
name = "kestrel-llm-openai-compat"
version = "0.1.5"
description = "Shared OpenAI-compatible helpers for Kestrel LLM provider plugins."
requires-python = ">=3.11"
dependencies = [
    "kestrel-sovereign-sdk>=0.14.1,<1",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
