[project]
name = "kestrel-llm-vertex"
version = "0.1.0"
description = "Google Vertex AI LLM provider plugin for Kestrel Sovereign."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.75.0,<3",
    "kestrel-sovereign-sdk>=0.17.0,<1",
    "pydantic>=2",
]

[project.entry-points."kestrel_sovereign.llm_providers"]
vertex_ai = "kestrel_llm_vertex:VertexAIAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
