[project]
name = "kestrel-llm-xai"
version = "0.1.6"
description = "xAI Grok LLM provider plugin for Kestrel Sovereign."
requires-python = ">=3.11"
dependencies = [
    "kestrel-llm-openai-compat>=0.1.5,<0.2",
    "kestrel-sovereign-sdk>=0.14.1,<1",
    "openai>=1.0",
    "pydantic>=2",
]

[project.entry-points."kestrel_sovereign.llm_providers"]
xai = "kestrel_llm_xai:XAIAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
