[project]
name = "kestrel-llms"
version = "0.1.7"
description = "Convenience extras for Kestrel Sovereign LLM provider plugins."
requires-python = ">=3.11"
dependencies = [
    "kestrel-sovereign-sdk>=0.17.0,<1",
]

[project.optional-dependencies]
deepseek = ["kestrel-llm-deepseek>=0.1.8,<0.2"]
xai = ["kestrel-llm-xai>=0.1.8,<0.2"]
kimi = ["kestrel-llm-kimi>=0.1.8,<0.2"]
vertex = ["kestrel-llm-vertex>=0.1.0,<0.2"]
cloud = [
    "kestrel-llm-deepseek>=0.1.8,<0.2",
    "kestrel-llm-xai>=0.1.8,<0.2",
    "kestrel-llm-kimi>=0.1.8,<0.2",
    "kestrel-llm-vertex>=0.1.0,<0.2",
]
all = [
    "kestrel-llm-deepseek>=0.1.8,<0.2",
    "kestrel-llm-xai>=0.1.8,<0.2",
    "kestrel-llm-kimi>=0.1.8,<0.2",
    "kestrel-llm-vertex>=0.1.0,<0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
